# async-rdma

./: .gitignore  Cargo.toml  ChangeLog.md  Contributing.md  README.md  build.rs  run.sh
.cargo/: config.toml
.github/workflows/: ci.yml
doc/: cq_event_listener_arch.md  event_listener_arch.md
examples/: client.rs  cm_client.rs  cm_server.rs  devices.rs  rpc.rs  send_with_imm.rs  server.rs  write_with_imm.rs
scripts/: run.sh  setup.sh
src/: access.rs  agent.rs  completion_queue.rs  context.rs  cq_event_listener.rs  device.rs  error_utilities.rs  event_channel.rs  event_listener.rs  gid.rs  hashmap_extension.rs  ibv_event_listener.rs  id.rs  lib.rs  lock_utilities.rs  macro_utilities.rs  main.rs  memory_region.rs  memory_window.rs  mr_allocator.rs  protection_domain.rs  queue_pair.rs  rdma_box.rs  rmr_manager.rs  work_request.rs
src/basic/: async_server.rs  client.c  ibv.rs  mod.rs  pure_ibv.rs  server.c  server.rs  socket.rs  sync_server.rs  util.rs
src/memory_region/: local.rs  mod.rs  raw.rs  remote.rs
src/rxe/: Kbuild  Makefile
src/siw/: Kbuild
tests/: atomic.rs  cancel_safety.rs  device.rs  imm.rs  loop.rs  mr_slice.rs  rmr_access.rs  rmr_timeout.rs  send_with_imm.rs  test.rs  test_utilities.rs  time.rs  write_with_imm.rs
