[package]
name = "async-rdma"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdma-sys = { git = "https://github.com/datenlord/rdma-sys" }
libc = "0.2.104"
errno = "0.2.7"
serde = { version = "1.0.130", features = ["derive"] }
bincode = "1.3.3"
tokio = { version = "1.15", features = ["full", "tracing"] }
async-bincode = "0.6.1"
futures = "0.3.17"
lockfree-cuckoohash = {git = "https://github.com/GTwhy/lockfree-cuckoohash"}
rand = "0.8"
thiserror = "1.0.30"
num-traits = "0.2.14"
num-derive = "0.3.3"
tracing = "0.1"
tracing-subscriber = "0.2"
lazy_static = "1.4.0"
