[package]
edition = "2021"
name = "async-rdma"
version = "0.1.0"
license-file = "LICENSE"
repository = "https://github.com/datenlord/async-rdma"
keywords = [ "rdma", "network" ]
categories = ["asynchronous", "hardware-support", "network-programming"]
description = "A rust async wrapper for RDMA"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-bincode = "0.6.1"
bincode = "1.3.3"
enumflags2 = "0.7.3"
errno = "0.2.7"
futures = "0.3.17"
lazy_static = "1.4.0"
libc = "0.2.104"
lockfree-cuckoohash = {git = "https://github.com/GTwhy/lockfree-cuckoohash"}
num-derive = "0.3.3"
num-traits = "0.2.14"
rand = "0.8"
rdma-sys = {git = "https://github.com/datenlord/rdma-sys"}
serde = {version = "1.0.130", features = ["derive"]}
thiserror = "1.0.30"
tokio = {version = "1.15", features = ["full", "tracing"]}
tracing = "0.1"
tracing-subscriber = "0.2"
utilities = {git = "https://github.com/datenlord/utilities"}
