[package]
categories = ["asynchronous", "hardware-support", "network-programming"]
description = "A rust async wrapper for RDMA ibvers lib"
edition = "2021"
keywords = ["rdma", "network"]
license-file = "LICENSE"
name = "async-rdma"
repository = "https://github.com/datenlord/async-rdma"
version = "0.5.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-bincode = "0.6.1"
bincode = "1.3.3"
clippy-utilities = "0.1.0"
enumflags2 = "0.7.3"
errno = "0.2.7"
futures = "0.3.17"
hex-simd = "0.5.0"
lazy_static = "1.4.0"
libc = "0.2.104"
lockfree-cuckoohash = "0.1.0"
num-derive = "0.3.3"
num-traits = "0.2.14"
numeric_cast = "0.1.2"
parking_lot = { version = "0.12.0", features = ["arc_lock", "send_guard"] }
rand = "0.8"
rdma-sys = "0.3.0"
scopeguard = "1.1.0"
serde = { version = "1.0.130", features = ["derive"] }
thiserror = "1.0.30"
tikv-jemalloc-sys = "0.4.3"
tokio = { version = "1.15", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3.9"
sealed = "0.4"
getset = "0.1.2"
derive_builder = "0.11.2"
async-trait = "0.1.58"

[dev-dependencies]
const-str = "0.3.1"
minstant = "0.1"
portpicker = "0.1.1"
local-ip-address = "0.4.5"

[[example]]
name = "cm_client"
required-features = ["cm", "raw"]

[features]
cancel_safety_test = [] # only used for cancel_safety test
raw = [] # send/recv raw data
cm = [] # connect cm server
exp = [] # experimental methods